tree-sitter-gruel/grammar.js
    source_file: ($) => seq(repeat($._item)),

    // -------------------------------------------------------------- comments
    // The Gruel lexer treats `//`, `////`, and longer slash runs as plain
    // line comments and `///` (exactly three slashes) as a doc comment.
    // For acceptance-differential purposes we skip both forms uniformly,
    // but we expose them as separate tokens so editor queries can colour
    // them differently.
    integer_literal: (_) => /[0-9]+/,

    boolean_literal: (_) => choice('true', 'false'),

    unit_literal: (_) => prec(1, seq('(', ')')),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // -------------------------------------------------------------- items
    _item: ($) =>
      choice(
        $.function_definition,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.derive_declaration,
        $.const_declaration,
        $.link_extern_block,
      ),

    function_definition: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        field('body', $.block),
      ),

    parameter_list: ($) =>
      seq('(', sepBy(',', $.parameter), ')'),

    parameter: ($) =>
      seq(
        optional('comptime'),
        field('name', choice($.identifier, $.self_literal)),
        optional(seq(':', field('type', $._type))),
      ),

    _type: ($) =>
      choice(
        $.unit_type,
        $.never_type,
        $.array_type,
        $.tuple_type,
        $.primitive_type,
        $.self_type,
        $.type_call,
        $.named_type,
        $.anonymous_struct_type,
      ),

    unit_type: (_) => prec(2, seq('(', ')')),

    never_type: (_) => '!',

    array_type: ($) =>
      seq('[', $._type, ';', $.integer_literal, ']'),

    tuple_type: ($) =>
      seq(
        '(',
        $._type,
        ',',
        sepByCommaWithTrailing($._type),
        ')',
      ),

    primitive_type: (_) =>
      choice(
        'i8', 'i16', 'i32', 'i64', 'isize',
        'u8', 'u16', 'u32', 'u64', 'usize',
        'f16', 'f32', 'f64',
        'bool', 'char',
      ),

    type_call: ($) =>
      prec(
        1,
        seq(
          field('callee', $.identifier),
          '(',
          sepByCommaWithTrailing1($._type),
          ')',
        ),
      ),

    block: ($) =>
      seq(
        '{',
        repeat($._block_statement),
        optional(field('final_expression', $._expression)),
        '}',
      ),

    _block_statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.expression_statement,
        $.control_flow_statement,
        $.empty_statement,
      ),

    expression_statement: ($) =>
      seq(field('expression', $._expression), ';'),

    // Mid-block "control flow" expressions can appear without a trailing
    // `;`. Mirrors chumsky's `is_control_flow_expr` set: if/while/for/
    // match/loop/comptime-unroll/blocks. They are still parsed as
    // expressions; this rule simply marks the no-semi statement
    // position.
    _expression: ($) =>
      choice(
        $._literal_expression,
        $.identifier,
        $.self_literal,
        $.self_type_literal,
        $.primitive_type_value,
        $.paren_expression,
        $.tuple_expression,
        $.array_literal_expression,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.tuple_index_expression,
        $.index_expression,
        $.path_expression,
        $.struct_literal_expression,
        $.intrinsic_call_expression,
        $.import_expression,
        $.if_expression,
        $.match_expression,
        $.while_expression,
        $.for_expression,
        $.loop_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
        $.block_expression,
        $.comptime_expression,
        $.comptime_unroll_expression,
        $.checked_expression,
        $.anonymous_function_expression,
        $.anonymous_struct_expression,
        $.anonymous_enum_expression,
        $.anonymous_interface_expression,
      ),

    tuple_expression: ($) =>
      prec(
        2,
        seq(
          '(',
          $._expression,
          ',',
          sepByCommaWithTrailing($._expression),
          ')',
        ),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('object', $._expression),
          '[',
          field('index', choice($._expression, $.range_expression)),
          ']',
        ),
      ),

    return_expression: ($) =>
      prec.right(seq('return', optional($._expression))),
